AÃ±ade brillo al hero y ajusta nombre

--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
       </ul>
     </div>
 
-    <!-- Contenido de la sección de inicio -->
-    <div class="inicio-content">
-      <h1 class="titulo-principal">Bienvenido a mi Portfolio</h1>
-      <p class="subtitulo">Desarrollador Web en Formación</p>
-      <a href="#contacto" class="btn-cta">Contáctame</a>
-    </div>
+<!-- Contenido de la sección de inicio -->
+<div class="inicio-content">
+  <h1 class="titulo-principal">Bienvenido a mi Portfolio</h1>
+  <h2 class="nombre">Soy Pablo Arenas</h2>
+  <p class="subtitulo">Desarrollador Multiplataforma en Formación</p>
+  <a href="#contacto" class="btn-cta">Contáctame</a>
+</div>
   </section>
 
   <!-- Sección sobre mí -->
@@ -70,7 +71,7 @@
     <div class="sobre-mi-content">
       <img src="imagenes/WhatsApp Image 2024-10-07 at 15.21.50 (1).jpeg" alt="Foto mia" class="foto-perfil">
       <div class="texto-sobre-mi">
-        <p>Soy un joven graduado de Bachillerato que actualmente estudia un ciclo superior de Desarrollo de Aplicaciones Web (DAW) con la meta de crecer profesionalmente. Durante mi carrera educativa he desarrollado habilidades para trabajar en equipo y resolver una amplia variedad de problemas. Me adapto fácilmente a nuevos entornos y estoy entusiasmado por comenzar mi carrera profesional para seguir perfeccionando mis habilidades.</p>
+        <p>Soy un joven estudiante del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) con un gran interés por la programación y el desarrollo tecnológico. Durante mi formación he adquirido habilidades en la creación de aplicaciones, la resolución de problemas y el trabajo en equipo. Me considero una persona curiosa, responsable y con facilidad para aprender y adaptarme a nuevos entornos. Mi objetivo es seguir creciendo como desarrollador y aplicar mis conocimientos en proyectos que me permitan evolucionar profesional y personalmente.</p>
         <a href="./pdf/CV-MateoAchá-Español.pdf" class="btn-descargar-cv" download>Descargar CV</a>
       </div>
     </div>
