Actualizar experiencia con nuevos puestos e iconos

--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
     <div class="timeline">
       <div class="timeline-item">
         <div class="timeline-icon">
-          <i class="fas fa-utensils"></i>
+          <i class="fas fa-code"></i>
         </div>
         <div class="timeline-content">
-          <h3>Ayuda en la Cocina</h3>
-          <span class="fecha">Junio 2023 – La Taberneta, Peñíscola</span>
-          <p>Asistencia en tareas de cocina, lavado de platos, preparación de zona de servicio y asistencia en el servicio al cliente.</p>
+          <h3>Desarrollador de Software</h3>
+          <span class="fecha">Octubre 2025 – Actualidad · Empresa d'Inserció Solucions Socials Sostenibles · Barcelona, Cataluña · Presencial</span>
+          <p>Programador de JavaScript y PHP, colaborando en el desarrollo del ERP corporativo y en el mantenimiento de las aplicaciones internas de la compañía.</p>
         </div>
       </div>
       <div class="timeline-item">
         <div class="timeline-icon">
-          <i class="fas fa-paint-roller"></i>
+          <i class="fas fa-chalkboard-teacher"></i>
         </div>
         <div class="timeline-content">
-          <h3>Proyectos de Bricolaje y Pintura</h3>
-          <span class="fecha">2022</span>
-          <p>Apoyo en la preparación de superficies, aplicación de pintura y organización del área de trabajo.</p>
+          <h3>Profesor de Clases Particulares</h3>
+          <span class="fecha">2022 – 2024 · Autónomo · Barcelona, Cataluña · Presencial</span>
+          <p>Impartí sesiones personalizadas de refuerzo en materias tecnológicas y científicas, diseñando materiales adaptados a cada estudiante.</p>
         </div>
       </div>
     </div>
