--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="timeline-content">
           <h3>Desarrollador de Software</h3>
-          <span class="fecha">Octubre 2025 – Actualidad · Empresa d'Inserció Solucions Socials Sostenibles · Barcelona, Cataluña · Presencial</span>
+          <span class="fecha">Octubre 2025 – Actualidad · Empresa d'Inserció Solucions Socials Sostenibles · Barcelona</span>
           <p>Programador de JavaScript y PHP, colaborando en el desarrollo del ERP corporativo y en el mantenimiento de las aplicaciones internas de la compañía.</p>
         </div>
       </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="timeline-content">
           <h3>Profesor de Clases Particulares</h3>
-          <span class="fecha">2022 – 2024 · Autónomo · Barcelona, Cataluña · Presencial</span>
+          <span class="fecha">2022 – 2024 · Autónomo · Barcelona</span>
           <p>Impartí sesiones personalizadas de refuerzo en materias tecnológicas y científicas, diseñando materiales adaptados a cada estudiante.</p>
         </div>
       </div>
