Refinar experiencia y habilidades con bordes degradados

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
     <h2>Estudios</h2>
     <div class="estudios-content">
       <div class="estudio-item">
-        <h3>Bachillerato Tecnológico</h3>
+        <h3>Bachillerato Social</h3>
         <span class="institucion">La Salle Horta</span>
-        <span class="fecha">2020 - 2023</span>
+        <span class="fecha">2021 - 2024</span>
       </div>
       <div class="estudio-item">
-        <h3>Ciclo Superior en Desarrollo de Aplicaciones Web</h3>
+        <h3>Ciclo Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
         <span class="institucion">La Salle Gràcia, Barcelona</span>
-        <span class="fecha">2023 - Actualidad</span>
+        <span class="fecha">2024 - Actualidad</span>
       </div>
     </div>
   </section>
