--- a/index.html
+++ b/index.html
@@ -108,16 +108,26 @@
   <!-- Sección de estudios -->
   <section id="estudios">
     <h2>Estudios</h2>
-    <div class="estudios-content">
-      <div class="estudio-item">
-        <h3>Bachillerato Social</h3>
-        <span class="institucion">La Salle Horta</span>
-        <span class="fecha">2021 - 2024</span>
+    <div class="timeline estudios-timeline">
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fas fa-laptop-code"></i>
+        </div>
+        <div class="timeline-content">
+          <h3>Ciclo Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
+          <span class="fecha">2024 - Actualidad · La Salle Gràcia · Barcelona</span>
+          <p>Formación orientada al desarrollo de aplicaciones multiplataforma, con enfoque en buenas prácticas, arquitectura de software y trabajo en equipo.</p>
+        </div>
       </div>
-      <div class="estudio-item">
-        <h3>Ciclo Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
-        <span class="institucion">La Salle Gràcia, Barcelona</span>
-        <span class="fecha">2024 - Actualidad</span>
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fas fa-graduation-cap"></i>
+        </div>
+        <div class="timeline-content">
+          <h3>Bachillerato Social</h3>
+          <span class="fecha">2021 - 2024 · La Salle Horta · Barcelona</span>
+          <p>Itinerario social con refuerzo en competencias comunicativas y tecnológicas, potenciando habilidades transversales aplicadas al entorno académico.</p>
+        </div>
       </div>
     </div>
   </section>
