--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="timeline-content">
           <h3>Bachillerato Social</h3>
           <span class="fecha">2021 - 2024 · La Salle Horta · Barcelona</span>
-          <p>Itinerario social con refuerzo en competencias comunicativas y tecnológicas, potenciando habilidades transversales aplicadas al entorno académico.</p>
+          <p>Formación en desarrollo de aplicaciones multiplataforma, incluyendo programación, bases de datos y desarrollo web y móvil, con enfoque en buenas prácticas, arquitectura de software y trabajo en equipo.</p>
         </div>
       </div>
     </div>
