RediseÃ±ar habilidades tecnicas con card vertical

--- a/index.html
+++ b/index.html
@@ -135,82 +135,28 @@
   <!-- Sección de habilidades -->
   <section id="habilidades">
     <h2>Habilidades Técnicas</h2>
-    <div class="habilidades-content">
-      <table class="tabla-habilidades">
-        <thead>
-          <tr>
-            <th>Lenguaje/Tool</th>
-            <th>Nivel</th>
-            <th>Logo</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>HTML</td>
-            <td>Experto</td>
-            <td><img src="imagenes/icons8-html-48.png" alt="HTML Logo"></td>
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>Avanzado</td>
-            <td><img src="imagenes/icons8-css-48.png" alt="CSS Logo"></td>
-          </tr>
-          <tr>
-            <td>GIT</td>
-            <td>Experto</td>
-            <td><img src="imagenes/icons8-github-48.png" alt="Git Logo"></td>
-          </tr>
-          <tr>
-            <td>Java</td>
-            <td>Intermedio</td>
-            <td><img src="imagenes/icons8-logotipo-de-java-coffee-cup-64.png" alt="Java Logo"></td>
-          </tr>
-          <tr>
-            <td>SQL</td>
-            <td>Intermedio</td>
-            <td><img src="imagenes/icons8-sql-64.png" alt="SQL Logo"></td>
-          </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td>Principiante</td>
-            <td><img src="imagenes/icons8-javascript-48.png" alt="JavaScript Logo"></td>
-          </tr>
-          <tr>
-            <td>PHP</td>
-            <td>Principiante</td>
-            <td><img src="imagenes/icons8-php-64.png" alt="PHP Logo"></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <h2>Idiomas</h2>
-    <div class="habilidades-content">
-      <table class="tabla-habilidades">
-        <thead>
-          <tr>
-            <th>Idioma</th>
-            <th>Nivel</th>
-            <th>Logo</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Español</td>
-            <td>Nativo</td>
-            <td><img src="imagenes/icons8-españa-48.png" alt="Español Logo"></td>
-          </tr>
-          <tr>
-            <td>Catalán</td>
-            <td>Nativo</td>
-            <td><img src="imagenes/bandera.png" alt="Catalán logo"></td>
-          </tr>
-          <tr>
-            <td>Inglés</td>
-            <td>Avanzado</td>
-            <td><img src="imagenes/icons8-inglaterra-48.png" alt="Inglés Logo"></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="habilidades-stack">
+      <div class="habilidad-card">
+        <h3>Desarrollo Móvil</h3>
+        <div class="habilidad-item">
+          <div class="habilidad-label">Kotlin</div>
+          <div class="habilidad-bar">
+            <div class="habilidad-bar-fill nivel-70"></div>
+          </div>
+        </div>
+        <div class="habilidad-item">
+          <div class="habilidad-label">Swift</div>
+          <div class="habilidad-bar">
+            <div class="habilidad-bar-fill nivel-40"></div>
+          </div>
+        </div>
+        <div class="habilidad-item">
+          <div class="habilidad-label">Jetpack Compose</div>
+          <div class="habilidad-bar">
+            <div class="habilidad-bar-fill nivel-40"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
