Unificar habilidades en card con barras y etiquetas

--- a/index.html
+++ b/index.html
@@ -137,23 +137,63 @@
     <h2>Habilidades Técnicas</h2>
     <div class="habilidades-stack">
       <div class="habilidad-card">
-        <h3>Desarrollo Móvil</h3>
-        <div class="habilidad-item">
-          <div class="habilidad-label">Kotlin</div>
-          <div class="habilidad-bar">
-            <div class="habilidad-bar-fill nivel-70"></div>
+        <div class="habilidad-group">
+          <h3>Desarrollo Móvil</h3>
+          <div class="habilidad-item">
+            <div class="habilidad-label">Kotlin</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-70"></div>
+            </div>
+          </div>
+          <div class="habilidad-item">
+            <div class="habilidad-label">Swift</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-45"></div>
+            </div>
+          </div>
+          <div class="habilidad-item">
+            <div class="habilidad-label">Jetpack Compose</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-45"></div>
+            </div>
           </div>
         </div>
-        <div class="habilidad-item">
-          <div class="habilidad-label">Swift</div>
-          <div class="habilidad-bar">
-            <div class="habilidad-bar-fill nivel-40"></div>
+        <div class="habilidad-group">
+          <h3>Desarrollo Web</h3>
+          <div class="habilidad-item">
+            <div class="habilidad-label">HTML / CSS</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-90"></div>
+            </div>
+          </div>
+          <div class="habilidad-item">
+            <div class="habilidad-label">JavaScript (Básico)</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-55"></div>
+            </div>
+          </div>
+          <div class="habilidad-item">
+            <div class="habilidad-label">PHP</div>
+            <div class="habilidad-bar">
+              <div class="habilidad-bar-fill nivel-80"></div>
+            </div>
           </div>
         </div>
-        <div class="habilidad-item">
-          <div class="habilidad-label">Jetpack Compose</div>
-          <div class="habilidad-bar">
-            <div class="habilidad-bar-fill nivel-40"></div>
+        <div class="habilidad-group">
+          <h3>Otras Tecnologías</h3>
+          <div class="skill-tag-grid">
+            <span class="skill-tag">Java</span>
+            <span class="skill-tag">Kotlin / Jetpack Compose</span>
+            <span class="skill-tag">Swift / SwiftUI</span>
+            <span class="skill-tag">Python</span>
+            <span class="skill-tag">C#</span>
+            <span class="skill-tag">SQL</span>
+            <span class="skill-tag">MongoDB</span>
+            <span class="skill-tag">Git</span>
+            <span class="skill-tag">Bash</span>
+            <span class="skill-tag">XML</span>
+            <span class="skill-tag">Lua</span>
+            <span class="skill-tag">Laravel</span>
           </div>
         </div>
       </div>
