Pulir habilidades web y estilos

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
           </div>
           <div class="habilidad-item">
-            <div class="habilidad-label">JavaScript (Básico)</div>
+            <div class="habilidad-label">JavaScript</div>
             <div class="habilidad-bar">
               <div class="habilidad-bar-fill nivel-55"></div>
             </div>
@@ -175,7 +175,7 @@
           <div class="habilidad-item">
             <div class="habilidad-label">PHP</div>
             <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-80"></div>
+              <div class="habilidad-bar-fill nivel-65"></div>
             </div>
           </div>
         </div>
@@ -183,8 +183,6 @@
           <h3>Otras Tecnologías</h3>
           <div class="skill-tag-grid">
             <span class="skill-tag">Java</span>
-            <span class="skill-tag">Kotlin / Jetpack Compose</span>
-            <span class="skill-tag">Swift / SwiftUI</span>
             <span class="skill-tag">Python</span>
             <span class="skill-tag">C#</span>
             <span class="skill-tag">SQL</span>
@@ -192,7 +190,6 @@
             <span class="skill-tag">Git</span>
             <span class="skill-tag">Bash</span>
             <span class="skill-tag">XML</span>
-            <span class="skill-tag">Lua</span>
             <span class="skill-tag">Laravel</span>
           </div>
         </div>
