RediseÃ±ar seccion de proyectos con tarjetas

--- a/index.html
+++ b/index.html
@@ -200,19 +200,40 @@
   <!-- Sección de proyectos -->
   <section id="proyectos">
     <h2>Proyectos</h2>
-    <div class="proyectos-content">
-      <!-- Proyecto 1 -->
-      <div class="proyecto-item">
-        <img src="imagenes/ilustracion-3d-banner-fondo-juegos-casino-ruleta-dados-elementos-casino-tarjetas-poquer-ai-generativo_91128-2286.avif" alt="Proyecto 1">
-        <h3>Ruleta</h3>
-        <p>Proyecto de la ruleta de un casino <a href="https://github.com/EseEneZeta/Ruleta" target="_blank">Ver en GitHub</a></p>
-      </div>
-      <!-- Proyecto 2 -->
-      <div class="proyecto-item">
-        <img src="imagenes/Captura de pantalla 2024-12-13 161014.png" alt="Proyecto 2">
-        <h3> Proyecto 2</h3>
-        <p>Proyecto de una web de un restaurante de Kebab <a href="https://github.com/EseEneZeta/Restaurante-Kebab" target="_blank">Ver en GitHub</a></p>
-      </div>
+    <div class="proyectos-grid">
+      <article class="proyecto-card">
+        <div class="proyecto-media">
+          <img src="imagenes/ilustracion-3d-banner-fondo-juegos-casino-ruleta-dados-elementos-casino-tarjetas-poquer-ai-generativo_91128-2286.avif" alt="Ruleta Casino">
+        </div>
+        <div class="proyecto-body">
+          <h3>Ruleta Casino</h3>
+          <p class="proyecto-subtitulo">Simulador de ruleta con lógica de apuestas y panel informativo.</p>
+          <div class="proyecto-tags">
+            <span class="proyecto-tag">HTML</span>
+            <span class="proyecto-tag">CSS</span>
+            <span class="proyecto-tag">JavaScript</span>
+          </div>
+          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Gestión del estado, animaciones CSS y componentes reutilizables.</p>
+          <a class="proyecto-btn" href="https://github.com/EseEneZeta/Ruleta" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
+        </div>
+      </article>
+      <article class="proyecto-card">
+        <div class="proyecto-media">
+          <img src="imagenes/Captura de pantalla 2024-12-13 161014.png" alt="Restaurante Kebab">
+        </div>
+        <div class="proyecto-body">
+          <h3>Restaurante Kebab</h3>
+          <p class="proyecto-subtitulo">Landing promocional con menú dinámico y secciones interactivas.</p>
+          <div class="proyecto-tags">
+            <span class="proyecto-tag">HTML</span>
+            <span class="proyecto-tag">CSS</span>
+            <span class="proyecto-tag">JavaScript</span>
+            <span class="proyecto-tag">PHP</span>
+          </div>
+          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Arquitectura modular, formularios accesibles y optimización de assets.</p>
+          <a class="proyecto-btn" href="https://github.com/EseEneZeta/Restaurante-Kebab" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
+        </div>
+      </article>
     </div>
   </section>
 
