Actualizar imagenes de proyectos

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="proyectos-grid">
       <article class="proyecto-card">
         <div class="proyecto-media">
-          <img src="imagenes/ilustracion-3d-banner-fondo-juegos-casino-ruleta-dados-elementos-casino-tarjetas-poquer-ai-generativo_91128-2286.avif" alt="Ruleta Casino">
+          <img src="imagenes/computer-programming-vs-computer-science-image_blog.jpg" alt="Ruleta Casino">
         </div>
         <div class="proyecto-body">
           <h3>Ruleta Casino</h3>
@@ -219,7 +219,7 @@
       </article>
       <article class="proyecto-card">
         <div class="proyecto-media">
-          <img src="imagenes/Captura de pantalla 2024-12-13 161014.png" alt="Restaurante Kebab">
+          <img src="imagenes/cuales-son-lenguajes-programacion.png" alt="Restaurante Kebab">
         </div>
         <div class="proyecto-body">
           <h3>Restaurante Kebab</h3>
