Actualizar contenido de proyectos con nuevos repos

--- a/index.html
+++ b/index.html
@@ -203,35 +203,34 @@
     <div class="proyectos-grid">
       <article class="proyecto-card">
         <div class="proyecto-media">
-          <img src="imagenes/computer-programming-vs-computer-science-image_blog.jpg" alt="Ruleta Casino">
+          <img src="imagenes/computer-programming-vs-computer-science-image_blog.jpg" alt="To-Do List App">
         </div>
         <div class="proyecto-body">
-          <h3>Ruleta Casino</h3>
-          <p class="proyecto-subtitulo">Simulador de ruleta con lógica de apuestas y panel informativo.</p>
+          <h3>To-Do List App</h3>
+          <p class="proyecto-subtitulo">Aplicación web para organizar tareas con filtros y persistencia local.</p>
           <div class="proyecto-tags">
-            <span class="proyecto-tag">HTML</span>
-            <span class="proyecto-tag">CSS</span>
-            <span class="proyecto-tag">JavaScript</span>
+            <span class="proyecto-tag">React</span>
+            <span class="proyecto-tag">TypeScript</span>
+            <span class="proyecto-tag">CSS Modules</span>
           </div>
-          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Gestión del estado, animaciones CSS y componentes reutilizables.</p>
-          <a class="proyecto-btn" href="https://github.com/EseEneZeta/Ruleta" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
+          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Manejo de estado, diseño modular y almacenamiento en localStorage.</p>
+          <a class="proyecto-btn" href="https://github.com/Areman-05/To-Do-List-App" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
         </div>
       </article>
       <article class="proyecto-card">
         <div class="proyecto-media">
-          <img src="imagenes/cuales-son-lenguajes-programacion.png" alt="Restaurante Kebab">
+          <img src="imagenes/cuales-son-lenguajes-programacion.png" alt="Ejercicios PHP">
         </div>
         <div class="proyecto-body">
-          <h3>Restaurante Kebab</h3>
-          <p class="proyecto-subtitulo">Landing promocional con menú dinámico y secciones interactivas.</p>
+          <h3>Ejercicios PHP</h3>
+          <p class="proyecto-subtitulo">Colección de prácticas para dominar PHP: control de flujo, arrays y funciones.</p>
           <div class="proyecto-tags">
-            <span class="proyecto-tag">HTML</span>
-            <span class="proyecto-tag">CSS</span>
-            <span class="proyecto-tag">JavaScript</span>
             <span class="proyecto-tag">PHP</span>
+            <span class="proyecto-tag">HTML</span>
+            <span class="proyecto-tag">Bootstrap</span>
           </div>
-          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Arquitectura modular, formularios accesibles y optimización de assets.</p>
-          <a class="proyecto-btn" href="https://github.com/EseEneZeta/Restaurante-Kebab" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
+          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Buenas prácticas en PHP, separación lógica/vista y componentes reutilizables.</p>
+          <a class="proyecto-btn" href="https://github.com/Areman-05/php_exercicis" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
         </div>
       </article>
     </div>
