Agregar proyecto Space Shooter

--- a/index.html
+++ b/index.html
@@ -219,6 +219,22 @@
       </article>
       <article class="proyecto-card">
         <div class="proyecto-media">
+          <img src="imagenes/space-shooter-cover.jpg" alt="Space Shooter Project">
+        </div>
+        <div class="proyecto-body">
+          <h3>Space Shooter</h3>
+          <p class="proyecto-subtitulo">Videojuego arcade 2D en el que pilotas una nave espacial y eliminas oleadas de enemigos.</p>
+          <div class="proyecto-tags">
+            <span class="proyecto-tag">Python</span>
+            <span class="proyecto-tag">Pygame</span>
+            <span class="proyecto-tag">Game Design</span>
+          </div>
+          <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Gestión de eventos, animaciones por sprites y sincronización de efectos de sonido.</p>
+          <a class="proyecto-btn" href="https://github.com/Areman-05/Space-Shooter-Project" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
+        </div>
+      </article>
+      <article class="proyecto-card">
+        <div class="proyecto-media">
           <img src="imagenes/cuales-son-lenguajes-programacion.png" alt="Ejercicios PHP">
         </div>
         <div class="proyecto-body">
