--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
 </head>
 <body>
   <!-- Navegación principal -->
-  <nav id="menu">
-    <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#sobre-mi">Sobre Mí</a></li>
-      <li><a href="#experiencia">Experiencia</a></li>
-      <li><a href="#estudios">Estudios</a></li>
-      <li><a href="#habilidades">Habilidades</a></li>
-      <li><a href="#proyectos">Proyectos</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-    <div class="toggle-menu">
-      <!-- Ícono para menú móvil -->
-      <span></span>
-      <span></span>
-      <span></span>
+  <nav id="menu" class="site-nav">
+    <div class="nav-inner">
+      <a href="#inicio" class="nav-brand" aria-label="Ir a la sección de inicio">
+        <span class="brand-mark" aria-hidden="true">PA</span>
+        <span class="brand-text">
+          <span class="brand-name">Pablo Arenas</span>
+          <span class="brand-role">Desarrollador Multiplataforma</span>
+        </span>
+      </a>
+      <ul class="nav-list">
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#sobre-mi">Sobre Mí</a></li>
+        <li><a href="#experiencia">Experiencia</a></li>
+        <li><a href="#estudios">Estudios</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+        <li class="nav-cta"><a href="./pdf/CV-MateoAchá-Español.pdf" download>Descargar CV</a></li>
+      </ul>
+      <div class="toggle-menu" aria-label="Abrir menú de navegación">
+        <!-- Ícono para menú móvil -->
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </nav>
 
