--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <nav id="menu" class="site-nav">
     <div class="nav-inner">
       <a href="#inicio" class="nav-brand" aria-label="Ir a la sección de inicio">
-        <span class="brand-mark" aria-hidden="true">PA</span>
+        <span class="brand-mark" aria-hidden="true">
+          <i class="fas fa-code"></i>
+        </span>
         <span class="brand-text">
           <span class="brand-name">Pablo Arenas</span>
           <span class="brand-role">Desarrollador Multiplataforma</span>
@@ -32,7 +34,6 @@
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
-        <li class="nav-cta"><a href="./pdf/CV-MateoAchá-Español.pdf" download>Descargar CV</a></li>
       </ul>
       <div class="toggle-menu" aria-label="Abrir menú de navegación">
         <!-- Ícono para menú móvil -->
