--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li></li>
         <li></li>
         <li></li>
-        <li>
+        <li></li>
       </ul>
     </div>
 
@@ -80,15 +80,13 @@
   <section id="sobre-mi">
     <h2>Sobre Mí</h2>
     <div class="sobre-mi-content">
-      <img src="imagenes/WhatsApp Image 2024-10-07 at 15.21.50 (1).jpeg" alt="Foto mia" class="foto-perfil">
+      <img src="imagenes/foto-perfil-2025.jpg" alt="Foto de perfil" class="foto-perfil">
       <div class="texto-sobre-mi">
         <p>Soy un joven estudiante del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) con un gran interés por la programación y el desarrollo tecnológico. Durante mi formación he adquirido habilidades en la creación de aplicaciones, la resolución de problemas y el trabajo en equipo. Me considero una persona curiosa, responsable y con facilidad para aprender y adaptarme a nuevos entornos. Mi objetivo es seguir creciendo como desarrollador y aplicar mis conocimientos en proyectos que me permitan evolucionar profesional y personalmente.</p>
-        <a href="./pdf/CV-MateoAchá-Español.pdf" class="btn-descargar-cv" download>Descargar CV</a>
+        <a href="./pdf/CV-Pablo-Arenas-2025.pdf" class="btn-descargar-cv" download>Descargar CV</a>
       </div>
     </div>
   </section>
-</body>
-</html>
 <!-- Sección de experiencia -->
   <section id="experiencia">
     <h2>Experiencia</h2>
