--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
   <section id="sobre-mi">
     <h2>Sobre Mí</h2>
     <div class="sobre-mi-content">
-      <img src="imagenes/foto-perfil-2025.jpg" alt="Foto de perfil" class="foto-perfil">
+      <div class="foto-wrapper">
+        <div class="foto-aura"></div>
+        <div class="foto-overlay"></div>
+        <img src="imagenes/foto-perfil-2025.jpg" alt="Foto de perfil" class="foto-perfil">
+      </div>
       <div class="texto-sobre-mi">
         <p>Soy un joven estudiante del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) con un gran interés por la programación y el desarrollo tecnológico. Durante mi formación he adquirido habilidades en la creación de aplicaciones, la resolución de problemas y el trabajo en equipo. Me considero una persona curiosa, responsable y con facilidad para aprender y adaptarme a nuevos entornos. Mi objetivo es seguir creciendo como desarrollador y aplicar mis conocimientos en proyectos que me permitan evolucionar profesional y personalmente.</p>
         <a href="./pdf/CV-Pablo-Arenas-2025.pdf" class="btn-descargar-cv" download>Descargar CV</a>
