feat: agregar secciÃ³n de reflexiones

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="#estudios">Estudios</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#reflexiones">Reflexiones</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
       <div class="toggle-menu" aria-label="Abrir menú de navegación">
@@ -261,6 +262,37 @@
           <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Buenas prácticas en PHP, separación lógica/vista y componentes reutilizables.</p>
           <a class="proyecto-btn" href="https://github.com/Areman-05/php_exercicis" target="_blank" rel="noopener noreferrer">Acceder a GitHub</a>
         </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- Sección de reflexiones -->
+  <section id="reflexiones">
+    <h2>Reflexiones</h2>
+    <div class="reflexiones-grid">
+      <article class="reflexion-card">
+        <h3>Lo que he aprendido</h3>
+        <p>He consolidado bases sólidas en programación, entendiendo a fondo el control de flujo, funciones y POO. También he aprendido a valorar la importancia de un código limpio, bien estructurado y documentado.</p>
+      </article>
+      <article class="reflexion-card">
+        <h3>Retos y objetivos</h3>
+        <p>Estoy incorporando nuevas herramientas como Java y Git, mejorando mis habilidades en JavaScript y comenzando a explorar backend para poder afrontar proyectos más completos y complejos.</p>
+      </article>
+      <article class="reflexion-card">
+        <h3>Trabajo en equipo y responsabilidad</h3>
+        <p>He comprendido que un proyecto no depende únicamente del código, sino también de la comunicación, la coordinación y la responsabilidad compartida. La constancia y la colaboración son tan importantes como la lógica y la sintaxis.</p>
+      </article>
+      <article class="reflexion-card">
+        <h3>Evolución técnica y mentalidad</h3>
+        <p>Aprender lenguajes como PHP, TypeScript o Node.js me ha enseñado que programar no es memorizar sintaxis, sino desarrollar una mentalidad flexible, analítica y orientada a resolver problemas reales.</p>
+      </article>
+      <article class="reflexion-card">
+        <h3>Gestión del tiempo y prioridades</h3>
+        <p>Trabajar en proyectos más serios me ha enseñado a planificar mejor, dividir tareas y priorizar de manera efectiva. La organización es clave para garantizar calidad en el trabajo, al igual que el conocimiento técnico.</p>
+      </article>
+      <article class="reflexion-card">
+        <h3>Visión profesional</h3>
+        <p>Cada vez entiendo más que ser desarrollador implica no solo escribir código, sino crear soluciones, colaborar con el equipo y mantener una ética de trabajo profesional que aporte valor a cualquier proyecto.</p>
       </article>
     </div>
   </section>
