style: alinear tarjetas de reflexiones con proyectos

--- a/index.html
+++ b/index.html
@@ -271,28 +271,46 @@
     <h2>Reflexiones</h2>
     <div class="reflexiones-grid">
       <article class="reflexion-card">
-        <h3>Lo que he aprendido</h3>
-        <p>He consolidado bases sólidas en programación, entendiendo a fondo el control de flujo, funciones y POO. También he aprendido a valorar la importancia de un código limpio, bien estructurado y documentado.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">01</span>
+          <h3>Lo que he aprendido</h3>
+          <p>He consolidado bases sólidas en programación, entendiendo a fondo el control de flujo, funciones y POO. También he aprendido a valorar la importancia de un código limpio, bien estructurado y documentado.</p>
+        </div>
       </article>
       <article class="reflexion-card">
-        <h3>Retos y objetivos</h3>
-        <p>Estoy incorporando nuevas herramientas como Java y Git, mejorando mis habilidades en JavaScript y comenzando a explorar backend para poder afrontar proyectos más completos y complejos.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">02</span>
+          <h3>Retos y objetivos</h3>
+          <p>Estoy incorporando nuevas herramientas como Java y Git, mejorando mis habilidades en JavaScript y comenzando a explorar backend para poder afrontar proyectos más completos y complejos.</p>
+        </div>
       </article>
       <article class="reflexion-card">
-        <h3>Trabajo en equipo y responsabilidad</h3>
-        <p>He comprendido que un proyecto no depende únicamente del código, sino también de la comunicación, la coordinación y la responsabilidad compartida. La constancia y la colaboración son tan importantes como la lógica y la sintaxis.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">03</span>
+          <h3>Trabajo en equipo y responsabilidad</h3>
+          <p>He comprendido que un proyecto no depende únicamente del código, sino también de la comunicación, la coordinación y la responsabilidad compartida. La constancia y la colaboración son tan importantes como la lógica y la sintaxis.</p>
+        </div>
       </article>
       <article class="reflexion-card">
-        <h3>Evolución técnica y mentalidad</h3>
-        <p>Aprender lenguajes como PHP, TypeScript o Node.js me ha enseñado que programar no es memorizar sintaxis, sino desarrollar una mentalidad flexible, analítica y orientada a resolver problemas reales.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">04</span>
+          <h3>Evolución técnica y mentalidad</h3>
+          <p>Aprender lenguajes como PHP, TypeScript o Node.js me ha enseñado que programar no es memorizar sintaxis, sino desarrollar una mentalidad flexible, analítica y orientada a resolver problemas reales.</p>
+        </div>
       </article>
       <article class="reflexion-card">
-        <h3>Gestión del tiempo y prioridades</h3>
-        <p>Trabajar en proyectos más serios me ha enseñado a planificar mejor, dividir tareas y priorizar de manera efectiva. La organización es clave para garantizar calidad en el trabajo, al igual que el conocimiento técnico.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">05</span>
+          <h3>Gestión del tiempo y prioridades</h3>
+          <p>Trabajar en proyectos más serios me ha enseñado a planificar mejor, dividir tareas y priorizar de manera efectiva. La organización es clave para garantizar calidad en el trabajo, al igual que el conocimiento técnico.</p>
+        </div>
       </article>
       <article class="reflexion-card">
-        <h3>Visión profesional</h3>
-        <p>Cada vez entiendo más que ser desarrollador implica no solo escribir código, sino crear soluciones, colaborar con el equipo y mantener una ética de trabajo profesional que aporte valor a cualquier proyecto.</p>
+        <div class="reflexion-card-body">
+          <span class="reflexion-badge">06</span>
+          <h3>Visión profesional</h3>
+          <p>Cada vez entiendo más que ser desarrollador implica no solo escribir código, sino crear soluciones, colaborar con el equipo y mantener una ética de trabajo profesional que aporte valor a cualquier proyecto.</p>
+        </div>
       </article>
     </div>
   </section>
