--- a/index.html
+++ b/index.html
@@ -318,20 +318,58 @@
   <!-- Sección de contacto -->
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>Estoy disponible para oportunidades y colaboraciones.</p>
-    <form id="contact-form" action="https://formspree.io/f/mbljeevl" method="POST">
-      <input type="text" name="nombre" placeholder="Tu Nombre" required>
-      <input type="email" name="email" placeholder="Tu Email" required>
-      <input type="text" name="asunto" placeholder="Asunto" required>
-      <textarea name="mensaje" placeholder="Tu Mensaje" required></textarea>
-      <button type="submit">Enviar Mensaje</button>
-    </form>    
-    <div class="info-contacto">
-      <p><strong>Email:</strong> <a href="mailto:mateoachasanchez07@gmail.com">mateoachasanchez07@gmail.com</a></p>
-      <p><strong>Teléfono:</strong> <a href="tel:+34627108632">+34 627108632</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mateo-achá-sánchez-3566b624b/" target="_blank">Perfil en LinkedIn</a></p>
+    <p class="contact-subtitle">¿Quieres ponerte en contacto conmigo? Envíame un mensaje y te responderé lo antes posible.</p>
+    <div class="contact-wrapper">
+      <div class="contact-card contact-social">
+        <h3>Redes sociales</h3>
+        <p class="contact-lead">También puedes escribirme por cualquiera de estos canales.</p>
+        <div class="contact-social-icons">
+          <a href="https://www.linkedin.com/in/mateo-achá-sánchez-3566b624b/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="tel:+34627108632" aria-label="Teléfono">
+            <i class="fas fa-phone"></i>
+          </a>
+          <a href="mailto:mateoachasanchez07@gmail.com" aria-label="Email">
+            <i class="fas fa-envelope"></i>
+          </a>
+        </div>
+        <p class="contact-hint">Responderé lo antes posible.</p>
+      </div>
+      <div class="contact-card contact-form-card">
+        <h3>Envíame un mensaje</h3>
+        <form id="contact-form" action="https://formspree.io/f/mbljeevl" method="POST">
+          <div class="form-grid">
+            <div class="form-column">
+              <label>
+                <span>Nombre</span>
+                <input type="text" name="nombre" placeholder="Tu nombre" required>
+              </label>
+              <label>
+                <span>Email</span>
+                <input type="email" name="email" placeholder="tu@ejemplo.com" required>
+              </label>
+              <label>
+                <span>Asunto</span>
+                <input type="text" name="asunto" placeholder="Sobre qué quieres hablar" required>
+              </label>
+            </div>
+            <div class="form-column">
+              <label class="form-field--message">
+                <span>Mensaje</span>
+                <textarea name="mensaje" placeholder="Escribe tu mensaje aquí" required></textarea>
+              </label>
+            </div>
+          </div>
+          <button type="submit" class="contact-btn">Enviar mensaje</button>
+          <p class="contact-footnote">También puedes contactarme por LinkedIn o GitHub.</p>
+        </form>
+      </div>
     </div>
-</section>
+  </section>
  <footer>
     <p>&copy; 2023 Mateo Achá Sánchez.</p>
   </footer>
