--- a/index.html
+++ b/index.html
@@ -320,27 +320,43 @@
     <h2>Contacto</h2>
     <p class="contact-subtitle">¿Quieres ponerte en contacto conmigo? Envíame un mensaje y te responderé lo antes posible.</p>
     <div class="contact-wrapper">
-      <div class="contact-card contact-social">
-        <h3>Redes sociales</h3>
-        <p class="contact-lead">También puedes escribirme por cualquiera de estos canales.</p>
+      <div class="contact-card contact-summary">
+        <div class="contact-summary-head">
+          <span class="contact-badge">Conectemos</span>
+          <h3>Redes y acceso directo</h3>
+        </div>
+        <p class="contact-lead">Elige el canal que prefieras o déjame un mensaje desde el formulario.</p>
         <div class="contact-social-icons">
-          <a href="https://www.linkedin.com/in/mateo-achá-sánchez-3566b624b/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="tel:+34627108632" aria-label="Teléfono">
+          <a href="tel:+34684269329" aria-label="Teléfono">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="mailto:mateoachasanchez07@gmail.com" aria-label="Email">
+          <a href="mailto:pab4822@outlook.com" aria-label="Email">
             <i class="fas fa-envelope"></i>
           </a>
         </div>
-        <p class="contact-hint">Responderé lo antes posible.</p>
+        <div class="contact-direct-info">
+          <div>
+            <span class="contact-direct-label">Teléfono</span>
+            <a href="tel:+34684269329">+34 684 26 93 29</a>
+          </div>
+          <div>
+            <span class="contact-direct-label">Email</span>
+            <a href="mailto:pab4822@outlook.com">pab4822@outlook.com</a>
+          </div>
+        </div>
+        <p class="contact-hint">Responderé en cuanto pueda.</p>
       </div>
       <div class="contact-card contact-form-card">
-        <h3>Envíame un mensaje</h3>
+        <div class="contact-summary-head">
+          <span class="contact-badge contact-badge--blue">Mensaje</span>
+          <h3>Envíame un mensaje</h3>
+        </div>
         <form id="contact-form" action="https://formspree.io/f/mbljeevl" method="POST">
           <div class="form-grid">
             <div class="form-column">
