--- a/index.html
+++ b/index.html
@@ -386,8 +386,15 @@
       </div>
     </div>
   </section>
- <footer>
-    <p>&copy; 2023 Mateo Achá Sánchez.</p>
+  <footer>
+    <div class="footer-content">
+      <p class="footer-copy">&copy; 2025 Pablo Arenas Mancebo</p>
+      <div class="footer-links">
+        <a href="#inicio">Inicio</a>
+        <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a href="mailto:pab4822@outlook.com">Email</a>
+      </div>
+    </div>
   </footer>
   <script src="script.js"></script>
 </body>
