feat: rediseÃ±ar secciÃ³n de habilidades

--- a/index.html
+++ b/index.html
@@ -149,62 +149,118 @@
   <!-- Sección de habilidades -->
   <section id="habilidades">
     <h2>Habilidades Técnicas</h2>
-    <div class="habilidades-stack">
-      <div class="habilidad-card">
-        <div class="habilidad-group">
-          <h3>Desarrollo Móvil</h3>
-          <div class="habilidad-item">
-            <div class="habilidad-label">Kotlin</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-70"></div>
-            </div>
-          </div>
-          <div class="habilidad-item">
-            <div class="habilidad-label">Swift</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-45"></div>
-            </div>
-          </div>
-          <div class="habilidad-item">
-            <div class="habilidad-label">Jetpack Compose</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-45"></div>
-            </div>
-          </div>
+    <div class="skills-wrapper">
+      <div class="skills-glass">
+        <div class="skills-intro">
+          <p>Disfruto construyendo experiencias completas, desde la arquitectura hasta el pulido visual. Estas son las herramientas con las que más cómodo me siento hoy.</p>
         </div>
-        <div class="habilidad-group">
-          <h3>Desarrollo Web</h3>
-          <div class="habilidad-item">
-            <div class="habilidad-label">HTML / CSS</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-90"></div>
+        <div class="skills-columns">
+          <div class="skills-column">
+            <div class="skill-cluster">
+              <h3>Desarrollo Móvil</h3>
+              <ul class="skill-meters">
+                <li>
+                  <div class="meter-head">
+                    <span>Kotlin</span>
+                    <span>Avanzado</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:70%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="meter-head">
+                    <span>Swift</span>
+                    <span>Intermedio</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:45%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="meter-head">
+                    <span>Jetpack Compose</span>
+                    <span>Intermedio</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:45%"></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="skills-pill-grid">
+              <span class="pill pill-kotlin">Android Studio</span>
+              <span class="pill pill-kotlin">Material Design</span>
+              <span class="pill pill-kotlin">Core Data</span>
             </div>
           </div>
-          <div class="habilidad-item">
-            <div class="habilidad-label">JavaScript</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-55"></div>
+          <div class="skills-column">
+            <div class="skill-cluster">
+              <h3>Desarrollo Web</h3>
+              <ul class="skill-meters">
+                <li>
+                  <div class="meter-head">
+                    <span>HTML / CSS</span>
+                    <span>Experto</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:90%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="meter-head">
+                    <span>JavaScript</span>
+                    <span>Intermedio</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:55%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="meter-head">
+                    <span>PHP</span>
+                    <span>Intermedio</span>
+                  </div>
+                  <div class="meter-bar">
+                    <div class="meter-fill" style="--fill:65%"></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="skills-pill-grid">
+              <span class="pill pill-web">React</span>
+              <span class="pill pill-web">TypeScript</span>
+              <span class="pill pill-web">Node.js</span>
+              <span class="pill pill-web">REST APIs</span>
             </div>
           </div>
-          <div class="habilidad-item">
-            <div class="habilidad-label">PHP</div>
-            <div class="habilidad-bar">
-              <div class="habilidad-bar-fill nivel-65"></div>
+          <div class="skills-column">
+            <div class="skills-cards-grid">
+              <article class="mini-card">
+                <h4>Back-end</h4>
+                <ul>
+                  <li><span>Java · Spring</span></li>
+                  <li><span>SQL · MongoDB</span></li>
+                  <li><span>Laravel · APIs</span></li>
+                </ul>
+              </article>
+              <article class="mini-card">
+                <h4>Herramientas</h4>
+                <ul>
+                  <li><span>Git & GitHub</span></li>
+                  <li><span>Bash & CLI</span></li>
+                  <li><span>Docker básico</span></li>
+                </ul>
+              </article>
+              <article class="mini-card">
+                <h4>Soft Skills</h4>
+                <ul>
+                  <li><span>Diseño centrado en el usuario</span></li>
+                  <li><span>Trabajo en equipo</span></li>
+                  <li><span>Resolución creativa</span></li>
+                </ul>
+              </article>
             </div>
-          </div>
-        </div>
-        <div class="habilidad-group">
-          <h3>Otras Tecnologías</h3>
-          <div class="skill-tag-grid">
-            <span class="skill-tag">Java</span>
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">C#</span>
-            <span class="skill-tag">SQL</span>
-            <span class="skill-tag">MongoDB</span>
-            <span class="skill-tag">Git</span>
-            <span class="skill-tag">Bash</span>
-            <span class="skill-tag">XML</span>
-            <span class="skill-tag">Laravel</span>
           </div>
         </div>
       </div>
