--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
         <div class="skills-columns">
           <div class="skills-column">
             <div class="skill-cluster">
-              <h3>Desarrollo Móvil</h3>
+              <h3><i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>Desarrollo Móvil</h3>
               <ul class="skill-meters">
                 <li>
                   <div class="meter-head">
-                    <span>Kotlin</span>
+                    <span class="meter-info"><i class="fa-brands fa-android" aria-hidden="true"></i>Kotlin</span>
                     <span>Avanzado</span>
                   </div>
                   <div class="meter-bar">
@@ -170,7 +170,7 @@
                 </li>
                 <li>
                   <div class="meter-head">
-                    <span>Swift</span>
+                    <span class="meter-info"><i class="fa-brands fa-apple" aria-hidden="true"></i>Swift</span>
                     <span>Intermedio</span>
                   </div>
                   <div class="meter-bar">
@@ -179,7 +179,7 @@
                 </li>
                 <li>
                   <div class="meter-head">
-                    <span>Jetpack Compose</span>
+                    <span class="meter-info"><i class="fa-solid fa-cubes" aria-hidden="true"></i>Jetpack Compose</span>
                     <span>Intermedio</span>
                   </div>
                   <div class="meter-bar">
@@ -189,18 +189,18 @@
               </ul>
             </div>
             <div class="skills-pill-grid">
-              <span class="pill pill-kotlin">Android Studio</span>
-              <span class="pill pill-kotlin">Material Design</span>
-              <span class="pill pill-kotlin">Core Data</span>
+              <span class="pill pill-kotlin"><i class="fa-solid fa-wand-magic-sparkles" aria-hidden="true"></i>Android Studio</span>
+              <span class="pill pill-kotlin"><i class="fa-regular fa-gem" aria-hidden="true"></i>Material Design</span>
+              <span class="pill pill-kotlin"><i class="fa-solid fa-database" aria-hidden="true"></i>Core Data</span>
             </div>
           </div>
           <div class="skills-column">
             <div class="skill-cluster">
-              <h3>Desarrollo Web</h3>
+              <h3><i class="fa-solid fa-globe" aria-hidden="true"></i>Desarrollo Web</h3>
               <ul class="skill-meters">
                 <li>
                   <div class="meter-head">
-                    <span>HTML / CSS</span>
+                    <span class="meter-info"><i class="fa-solid fa-code" aria-hidden="true"></i>HTML / CSS</span>
                     <span>Experto</span>
                   </div>
                   <div class="meter-bar">
@@ -209,7 +209,7 @@
                 </li>
                 <li>
                   <div class="meter-head">
-                    <span>JavaScript</span>
+                    <span class="meter-info"><i class="fa-brands fa-js" aria-hidden="true"></i>JavaScript</span>
                     <span>Intermedio</span>
                   </div>
                   <div class="meter-bar">
@@ -218,7 +218,7 @@
                 </li>
                 <li>
                   <div class="meter-head">
-                    <span>PHP</span>
+                    <span class="meter-info"><i class="fa-brands fa-php" aria-hidden="true"></i>PHP</span>
                     <span>Intermedio</span>
                   </div>
                   <div class="meter-bar">
@@ -228,16 +228,16 @@
               </ul>
             </div>
             <div class="skills-pill-grid">
-              <span class="pill pill-web">React</span>
-              <span class="pill pill-web">TypeScript</span>
-              <span class="pill pill-web">Node.js</span>
-              <span class="pill pill-web">REST APIs</span>
+              <span class="pill pill-web"><i class="fa-brands fa-react" aria-hidden="true"></i>React</span>
+              <span class="pill pill-web"><i class="fa-solid fa-code-branch" aria-hidden="true"></i>TypeScript</span>
+              <span class="pill pill-web"><i class="fa-brands fa-node-js" aria-hidden="true"></i>Node.js</span>
+              <span class="pill pill-web"><i class="fa-solid fa-network-wired" aria-hidden="true"></i>REST APIs</span>
             </div>
           </div>
           <div class="skills-column">
             <div class="skills-cards-grid">
               <article class="mini-card">
-                <h4>Back-end</h4>
+                <h4><i class="fa-solid fa-server" aria-hidden="true"></i>Back-end</h4>
                 <ul>
                   <li><span>Java · Spring</span></li>
                   <li><span>SQL · MongoDB</span></li>
@@ -245,7 +245,7 @@
                 </ul>
               </article>
               <article class="mini-card">
-                <h4>Herramientas</h4>
+                <h4><i class="fa-solid fa-toolbox" aria-hidden="true"></i>Herramientas</h4>
                 <ul>
                   <li><span>Git & GitHub</span></li>
                   <li><span>Bash & CLI</span></li>
@@ -253,7 +253,7 @@
                 </ul>
               </article>
               <article class="mini-card">
-                <h4>Soft Skills</h4>
+                <h4><i class="fa-solid fa-lightbulb" aria-hidden="true"></i>Soft Skills</h4>
                 <ul>
                   <li><span>Diseño centrado en el usuario</span></li>
                   <li><span>Trabajo en equipo</span></li>
